# claude-speriments

./: .gitignore  CLAUDE.md  EQUITY_AGENT_IDEAS.md  NOTES.md  README.md  cialdini-persuasion-proposal.md  cialdini-test-plan.md
.claude/commands/: cialdini-analyze.md  cialdini-authority.md  cialdini-commitment.md  cialdini-social-proof.md  cialdini-unity.md  code-diverse.md  compare-options.md  dialogue-sim.md  explain-diverse.md  multi-perspective.md  verbalized-sample.md
agents/equity-mgmt-integrity/: README.md  TESTING.md  example_analysis.py
agents/forensic-accounting/: README.md  TESTING.md  example_analysis.py
apps/analyst-workspace/: .gitignore  README.md  STRUCTURE.md  requirements.txt
apps/auction-ninja-app/: .gitignore  ICEBOX.md  NOTES.md  README.md  package.json  start.sh
apps/dbt-daily-logger/: .gitignore  BUILD_STATUS.md  FIREBASE_SETUP.md  NOTES.md  PHASE2_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  SPEC.md  analysis_options.yaml  pubspec.yaml
apps/email-llm-poc/: .gitignore  ICEBOX.md  NOTES.md  QUICKSTART.md  README.md  firebase.json  firestore.indexes.json  firestore.rules
apps/forensic-accounting/: README.md
apps/gist-app-highlight/: .gitignore  (+7 more)
auction-ninja-app/: README.md
cialdini-persuasion/: README.md  proposal.md
dbt_daily_logger/: .gitignore  BACKLOG.md  README.md  TODO.md  pubspec.yaml
docs/: ARCHITECTURE.md  IDEAS.md  README.md  index.html
forensic-accounting/: README.md
notes/: ai-thinking-loops-and-introspection.md
twitter-data-analyzer/: .gitignore  NOTES.md  QUICKSTART.md  README.md  UV_NOTES.md  pyproject.toml  requirements.txt  setup.py
twitter-data-analyzer/src/twitter_analyzer/: cli.py  config.py  database.py  profile_auditor.py  twitter_fetcher.py
verbalized-sampling/: PAPER_SUMMARY.md  README.md
(+172 files in other folders)
